syntax = "proto3";

package transfer;

service Transfer {
    // Mint tokens on IBC enabled chain
    rpc Mint (MintRequest) returns (MintResponse);

    // Burn tokens from IBC enabled chain
    rpc Burn (BurnRequest) returns (BurnResponse);
}

message MintRequest {
    // Chain ID of IBC enabled chain to connect to
    string chain_id = 1;
    // An optional request ID for tracking purposes
    optional string request_id = 2;
    // Amount of tokens to be sent
    string amount = 3;
    // Denom of tokens to be sent
    string denom = 4;
    // Receiver address on IBC enabled chain (if this is not provided, tokens will be sent to signer's address)
    optional string receiver_address = 5;
    // Memo value to be used in cosmos sdk transaction
    optional string memo = 6;
}

message MintResponse {
    // Hash of transaction on IBC enabled chain (in hex)
    string transaction_hash = 1;
}

message BurnRequest {
    // Chain ID of IBC enabled chain to send to
    string chain_id = 1;
    // An optional request ID for tracking purposes
    optional string request_id = 2;
    // Amount of tokens to be sent
    string amount = 3;
    // Denom of tokens to be sent
    string denom = 4;
    // Memo value to be used in cosmos sdk transaction
    optional string memo = 5;
}

message BurnResponse {
    // Hash of transaction on IBC enabled chain (in hex)
    string transaction_hash = 1;
}